# RPP-XAI

./: README.md  original.ipynb  pyproject.toml
data/: test.csv
reports/False_HighRisk_idx290/: info.txt  lime_report.html
reports/False_LowRisk_idx6/: info.txt  lime_report.html
reports/Random_Case_1_idx2945/: info.txt  lime_report.html
reports/True_HighRisk_idx42/: info.txt  lime_report.html
reports/True_LowRisk_idx0/: info.txt  lime_report.html
src/: explain_global.py  explain_lime.py  explain_shap.py  generate_full_report.py  train_model.py
